[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usecart"
version = "0.1.0"
description = "Python SDK for the Cart e-commerce intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Cart", email = "hello@usecart.com" }]
keywords = [
    "cart",
    "ecommerce",
    "api",
    "sdk",
    "shopify",
    "dropshipping",
    "product-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://usecart.com"
Documentation = "https://docs.usecart.com"
Repository = "https://github.com/usecart/cart-python"
Issues = "https://github.com/usecart/cart-python/issues"
